# CsvToJson

./: .gitignore  Cargo.toml
benches/: bench_transform.rs
src/: lib.rs  main.rs  parsing.rs
tests/: main.rs  test.csv.jsonl
