[package]
name = "csv_to_json"                                 # the name of the package
version = "0.1.0"                                    # the current version, obeying semver
authors = ["Darius Murawski <darius@murawski.blog>"]
edition = "2018"
license = "MIT"

[dependencies]
csv = "1.2"
glob = "0.3"
rayon = "1.7"
clap = { version = "3.1", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
serde_json = "1.0"
color-eyre = { version = "0.6", default-features = false }

[dev-dependencies]
criterion = "0.4"
assert_cmd = "2.0"
predicates = "3.0"

[[bench]]
name = "bench_transform"
harness = false

[[bin]]
name = "csv_to_json"
path = "src/main.rs"
